Use IxJava instead of Stream